# voxduio

./: .gitignore  README.md
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  main.rs  routes.rs
backend/src/handlers/: audio.rs  mod.rs  pdf.rs  tts.rs
backend/src/services/:  mod.rs  file_parser.rs  mod.rs  tts.rs  tts_engine.rs
backend/src/utils/: response.rs
