[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["multipart", "macros"]  }
hyper = "1.6.0"
tokio = { version = "1.44.2", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json", "multipart"]}
uuid = { version = "1.16.0", features = ["v4"]}
futures = "0.3.31"
tower = "0.5.2"
mime = "0.3.17"
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
base64 = "0.22.1"
axum-extra = { version = "0.10.1", features = [ "multipart"]}
lopdf = "0.36.0"

tower-http = { version = "0.6.2", features = ["fs"] }